--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,16 @@ version = "0.1.1"
 authors = ["smf9749"]
 build="build.rs"
 
+[profile.release]
+lto = true
+codegen-units = 1
+incremental = false
+opt-level = "z"
+
+
 [dependencies]
 users = "0.7.0"
 console = "0.6.1"
 separator = "0.3.1"
 chrono = "0.4.*"
-
 
