--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,34 @@
 [package]
 name = "du2"
-version = "0.1.1"
-authors = ["smf9749"]
-build="build.rs"
+version = "0.2.0"
+authors = ["Steve Flanagan <stevemflanagan@gmail.com>"]
+edition = "2018"
 
 [profile.release]
+debug = false
+debug-assertions = false
+# lto does help but not by much with pcre2
 lto = true
-codegen-units = 1
-incremental = false
-opt-level = "z"
+codegen-units=1
+opt-level = 3
+trustflags = ["-C", "target-cpu=native"]
+
+
+[target.'cfg(unix)'.dependencies]
+users = "0.10.0"
+libc = "0.2"
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["processthreadsapi"] }
 
 
 [dependencies]
-users = "0.7.0"
-console = "0.6.1"
-separator = "0.3.1"
-chrono = "0.4.*"
+structopt = {version = "0.3.15", feature=["color","termsize","wrap_help"]}
+cpu-time = "1.0.0"
+num_cpus = "1.13.0"
+lazy_static = "1.4.0"
+anyhow = "1.0.31"
+csv = "1.1.3"
+num-format = "0.4.0"
+regex = "1.3.9"
 
