--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,17 @@
 [package]
 name = "du2"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Steve Flanagan <stevemflanagan@gmail.com>"]
 edition = "2018"
+license = "Unlicense OR MIT"
+homepage="https://github.com/sflanaga/du2"
+documentation="https://github.com/sflanaga/du2"
+repository="https://github.com/sflanaga/du2"
+description = "Fast parallel file system lister / usage statistics summary"
+
+readme="README.md"
+keywords=["disk", "NFS", "tool", "file"]
+
 
 [profile.release]
 debug = false
@@ -28,7 +37,6 @@ cpu-time = "1.0.0"
 num_cpus = "1.13.0"
 lazy_static = "1.4.0"
 anyhow = "1.0.31"
-csv = "1.1.3"
 num-format = "0.4.0"
 regex = "1.3.9"
 
