--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ libc = "0.2"
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["processthreadsapi"] }
 
+[build-dependencies]
+vergen = "3.1.0"
 
 [dependencies]
 structopt = {version = "0.3.15", feature=["color","termsize","wrap_help"]}
